--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,11 +1,11 @@
 .Cards{
     width: 250px;
-    background-color: #301405;
+    background-color: #fffefd;
     margin: 15px;
-    text-align: center;
+    padding-left: 10px;
     padding: 10px;
     border-radius: 8px;
-    color: rgb(252, 249, 249);
+    color: rgb(12, 8, 8);
 }
 button{
     cursor: pointer;
@@ -13,5 +13,6 @@ button{
 .Cards img{
     width: 80%;
     height: 150px;
+    display: block;
     margin: 10px auto;
 }
