--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -5,14 +5,15 @@
 .asideNav{
     width: 100%;
     padding: 15px;
-    border: 2px solid black;
+    background-color: burlywood;
 }
 .asideNav h4{
     margin-left: 10px;
     cursor: pointer;
 }
 .asideDetail{
+    color: white;
     width: 100%;
     padding: 15px;
-    border: 2px solid red;
+    background-color: rgb(83, 81, 78);
 }
