--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,6 +2,7 @@
 .home{
     display: flex;
     justify-content: center;
-    margin-top: 10%;
+    padding-top: 10%;
+    background-color: #f5f2f0;
     
 }
