--- a/src/components/CheckOut/CheckOut.css
+++ b/src/components/CheckOut/CheckOut.css
@@ -18,14 +18,15 @@ table{
     margin: 10px auto;
 }
 
-tr td{
+ tr td{
     text-align: center;
     font-size: 18px;
     font-weight: 600;
-
+    color: black;
 }
 tr th{
     font-size: 20px;
     border: 1px solid black;
     padding: 10px;
+    color: black;
 }
